add: background desktop

--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boolzapp</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/responsive.css">
 </head>
+
 <body>
-    
+
+
+    <!-- <Boolzapp back +++++++++++++++++++++++++++++++++++++ > -->
+    <section class="Boolzapp-back">
+        <header class="bg-green back-header"></header>
+        <main class="bg-red main-container"></main>
+        <footer class="bg-grey back-footer"></footer>
+
+
+
+    </section>
+    <!-- <Boolzapp back +++++++++++++++++++++++++++++++++++++ > -->
+
+
 </body>
+
 </html>
