add: sections user-options and user-chat

--- a/index.html
+++ b/index.html
@@ -15,7 +15,18 @@
     <!-- <Boolzapp back +++++++++++++++++++++++++++++++++++++ > -->
     <section class="Boolzapp-back">
         <header class="bg-green back-header"></header>
-        <main class="bg-red main-container"></main>
+        <main class="bg-red main-container">
+            <!-- user options +++++++++++++++++++++++++++++++++++++-->
+            <section id="user-options" class="col-small">
+
+            </section>
+            <!-- user options +++++++++++++++++++++++++++++++++++++-->
+            <!-- user chat +++++++++++++++++++++++++++++++++++++-->
+            <section id="user-chat" class="col-big">
+
+            </section>
+            <!-- user chat +++++++++++++++++++++++++++++++++++++ -->
+        </main>
         <footer class="bg-grey back-footer"></footer>
 
 
