add: user-option sections

--- a/index.html
+++ b/index.html
@@ -18,11 +18,48 @@
         <main class="bg-red main-container">
             <!-- user options +++++++++++++++++++++++++++++++++++++-->
             <section id="user-options" class="col-small">
+                <!-- header-user-options +++++++++++++++++++++++++++++++++++++-->
+                <header id="header-user-options">
 
+                </header>
+                <!-- header-user-options +++++++++++++++++++++++++++++++++++++-->
+                <!-- notifics +++++++++++++++++++++++++++++++++++++-->
+                <div id="notifics">
+
+                </div>
+                <!-- notifics +++++++++++++++++++++++++++++++++++++ -->
+                <!-- search +++++++++++++++++++++++++++++++++++++ -->
+                <div id="search">
+
+                </div>
+                <!-- search +++++++++++++++++++++++++++++++++++++ -->
+                <!-- contact-list +++++++++++++++++++++++++++++++++++++ -->
+                <div id="contact-list">
+
+                </div>
+                <!-- contact list +++++++++++++++++++++++++++++++++++++ -->
             </section>
-            <!-- user options +++++++++++++++++++++++++++++++++++++-->
+
+            <!-- user options +++++++++++++++++++++++++++++++++++++ -->
             <!-- user chat +++++++++++++++++++++++++++++++++++++-->
             <section id="user-chat" class="col-big">
+                <!-- header-user-chat +++++++++++++++++++++++++++++++++++++-->
+                <header>
+
+                </header>
+                <!-- header-user-chat +++++++++++++++++++++++++++++++++++++ -->
+                <!-- messages +++++++++++++++++++++++++++++++++++++ -->
+                <div>
+
+                </div>
+                <!-- messages +++++++++++++++++++++++++++++++++++++ -->
+
+                <!-- footer-user-chat +++++++++++++++++++++++++++++++++++++-->
+
+                <div>
+
+                </div>
+                <!-- footer-user-chat +++++++++++++++++++++++++++++++++++++-->
 
             </section>
             <!-- user chat +++++++++++++++++++++++++++++++++++++ -->
