--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <section class="Boolzapp-back">
         <header class="bg-green back-header"></header>
         <main class="bg-red main-container">
-            <!-- user options +++++++++++++++++++++++++++++++++++++-->
             <section id="user-options" class="col-small">
                 <!-- header-user-options +++++++++++++++++++++++++++++++++++++-->
                 <header id="header-user-options">
@@ -44,19 +43,19 @@
             <!-- user chat +++++++++++++++++++++++++++++++++++++-->
             <section id="user-chat" class="col-big">
                 <!-- header-user-chat +++++++++++++++++++++++++++++++++++++-->
-                <header>
+                <header id="header-user-chat">
 
                 </header>
                 <!-- header-user-chat +++++++++++++++++++++++++++++++++++++ -->
                 <!-- messages +++++++++++++++++++++++++++++++++++++ -->
-                <div>
+                <div id="messages">
 
                 </div>
                 <!-- messages +++++++++++++++++++++++++++++++++++++ -->
 
                 <!-- footer-user-chat +++++++++++++++++++++++++++++++++++++-->
 
-                <div>
+                <div id="footer-user-chat" class="height-7-p">
 
                 </div>
                 <!-- footer-user-chat +++++++++++++++++++++++++++++++++++++-->
