add: left column corrections and scrollbar

--- a/index.html
+++ b/index.html
@@ -16,15 +16,23 @@
     <section class="Boolzapp-back">
         <header class="bg-green back-header"></header>
         <main class="bg-red main-container">
+            <!-- user-options +++++++++++++++++++++++++++++++++++++ -->
             <section id="user-options" class="col-small">
                 <!-- header-user-options +++++++++++++++++++++++++++++++++++++-->
-                <header id="header-user-options">
+                <header id="header-user-options" class="justify-sb left-text-block">
+                    <div class="pic-block">
 
+                    </div>
+                    <div class="options-block">
+
+                    </div>
                 </header>
                 <!-- header-user-options +++++++++++++++++++++++++++++++++++++-->
                 <!-- notifics +++++++++++++++++++++++++++++++++++++-->
                 <div id="notifics">
+                    <div class="pic-block">
 
+                    </div>
                 </div>
                 <!-- notifics +++++++++++++++++++++++++++++++++++++ -->
                 <!-- search +++++++++++++++++++++++++++++++++++++ -->
@@ -33,11 +41,85 @@
                 </div>
                 <!-- search +++++++++++++++++++++++++++++++++++++ -->
                 <!-- contact-list +++++++++++++++++++++++++++++++++++++ -->
-                <div id="contact-list">
+                <div id="contact-list" class="overflow-hidden">
+                    <div class="left-text-block">
+                        <div class="pic-block">
 
+                        </div>
+
+                    </div>
+                    <div class="left-text-block">
+                        <div class="pic-block">
+
+                        </div>
+
+                    </div>
+                    <div class="left-text-block">
+                        <div class="pic-block">
+
+                        </div>
+
+                    </div>
+
+                    <div class="left-text-block">
+                        <div class="pic-block">
+
+                        </div>
+
+                    </div>
+                    <div class="left-text-block">
+                        <div class="pic-block">
+
+                        </div>
+
+                    </div>
+                    <div class="left-text-block">
+                        <div class="pic-block">
+
+                        </div>
+
+                    </div>
+                    <div class="left-text-block">
+                        <div class="pic-block">
+
+                        </div>
+
+                    </div>
+                    <div class="left-text-block">
+                        <div class="pic-block">
+
+                        </div>
+
+                    </div>
+                    <div class="left-text-block">
+                        <div class="pic-block">
+
+                        </div>
+
+                    </div>
+                    <div class="left-text-block">
+                        <div class="pic-block">
+
+                        </div>
+
+                    </div>
+                    <div class="left-text-block">
+                        <div class="pic-block">
+
+                        </div>
+
+                    </div>
+                    <div class="left-text-block">
+                        <div class="pic-block">
+
+                        </div>
+
+                    </div>
                 </div>
                 <!-- contact list +++++++++++++++++++++++++++++++++++++ -->
             </section>
+            <!-- user-options +++++++++++++++++++++++++++++++++++++ -->
+
 
             <!-- user options +++++++++++++++++++++++++++++++++++++ -->
             <!-- user chat +++++++++++++++++++++++++++++++++++++-->
