add: first picture and background

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div id="contact-list" class="overflow-hidden">
                     <div class="left-text-block">
                         <div class="pic-block">
-
+                            <img src="./img/avatar_1.jpg" alt="">
                         </div>
 
                     </div>
@@ -130,7 +130,18 @@
                 </header>
                 <!-- header-user-chat +++++++++++++++++++++++++++++++++++++ -->
                 <!-- messages +++++++++++++++++++++++++++++++++++++ -->
-                <div id="messages">
+                <div id="messages" class="overflow-hidden">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam reiciendis quasi itaque asperiores, reprehenderit tenetur! Rem ducimus repellendus a libero ut assumenda. Accusantium, dolorem. Earum saepe architecto officiis molestiae totam?
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia alias esse facere, laboriosam accusantium impedit quibusdam facilis quisquam corrupti cumque porro nulla quo blanditiis dolorum ullam, velit, voluptate ducimus sint?
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia alias esse facere, laboriosam accusantium impedit quibusdam facilis quisquam corrupti cumque porro nulla quo blanditiis dolorum ullam, velit, voluptate ducimus sint?
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia alias esse facere, laboriosam accusantium impedit quibusdam facilis quisquam corrupti cumque porro nulla quo blanditiis dolorum ullam, velit, voluptate ducimus sint?
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia alias esse facere, laboriosam accusantium impedit quibusdam facilis quisquam corrupti cumque porro nulla quo blanditiis dolorum ullam, velit, voluptate ducimus sint?
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia alias esse facere, laboriosam accusantium impedit quibusdam facilis quisquam corrupti cumque porro nulla quo blanditiis dolorum ullam, velit, voluptate ducimus sint?
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia alias esse facere, laboriosam accusantium impedit quibusdam facilis quisquam corrupti cumque porro nulla quo blanditiis dolorum ullam, velit, voluptate ducimus sint?
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia alias esse facere, laboriosam accusantium impedit quibusdam facilis quisquam corrupti cumque porro nulla quo blanditiis dolorum ullam, velit, voluptate ducimus sint?
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia alias esse facere, laboriosam accusantium impedit quibusdam facilis quisquam corrupti cumque porro nulla quo blanditiis dolorum ullam, velit, voluptate ducimus sint?
+
+
 
                 </div>
                 <!-- messages +++++++++++++++++++++++++++++++++++++ -->
