--- a/index.html
+++ b/index.html
@@ -50,12 +50,14 @@
                     </div>
                     <div class="left-text-block">
                         <div class="pic-block">
+                            <img src="./img/avatar_1.jpg" alt="">
 
                         </div>
 
                     </div>
                     <div class="left-text-block">
                         <div class="pic-block">
+                            <img src="./img/avatar_1.jpg" alt="">
 
                         </div>
 
@@ -63,54 +65,63 @@
 
                     <div class="left-text-block">
                         <div class="pic-block">
+                            <img src="./img/avatar_1.jpg" alt="">
 
                         </div>
 
                     </div>
                     <div class="left-text-block">
                         <div class="pic-block">
+                            <img src="./img/avatar_1.jpg" alt="">
 
                         </div>
 
                     </div>
                     <div class="left-text-block">
                         <div class="pic-block">
+                            <img src="./img/avatar_1.jpg" alt="">
 
                         </div>
 
                     </div>
                     <div class="left-text-block">
                         <div class="pic-block">
+                            <img src="./img/avatar_1.jpg" alt="">
 
                         </div>
 
                     </div>
                     <div class="left-text-block">
                         <div class="pic-block">
+                            <img src="./img/avatar_1.jpg" alt="">
 
                         </div>
 
                     </div>
                     <div class="left-text-block">
                         <div class="pic-block">
+                            <img src="./img/avatar_1.jpg" alt="">
 
                         </div>
 
                     </div>
                     <div class="left-text-block">
                         <div class="pic-block">
+                            <img src="./img/avatar_1.jpg" alt="">
 
                         </div>
 
                     </div>
                     <div class="left-text-block">
                         <div class="pic-block">
+                            <img src="./img/avatar_1.jpg" alt="">
 
                         </div>
 
                     </div>
                     <div class="left-text-block">
                         <div class="pic-block">
+                            <img src="./img/avatar_1.jpg" alt="">
 
                         </div>
 
