add: header corrections

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Boolzapp</title>
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/responsive.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 
 <body>
@@ -19,24 +20,32 @@
             <!-- user-options +++++++++++++++++++++++++++++++++++++ -->
             <section id="user-options" class="col-small">
                 <!-- header-user-options +++++++++++++++++++++++++++++++++++++-->
-                <header id="header-user-options" class="justify-sb left-text-block">
+                <header id="header-user-options" class="justify-sb left-text-block flex-shrink-0">
                     <div class="pic-block">
+                        <img src="./img/avatar_1.jpg" alt="">
 
                     </div>
                     <div class="options-block">
-
+                        <i class="fa-solid fa-circle-notch"></i>
+                        <i class="fa-solid fa-message"></i>
+                        <i class="fa-solid fa-ellipsis-vertical"></i>
                     </div>
                 </header>
                 <!-- header-user-options +++++++++++++++++++++++++++++++++++++-->
                 <!-- notifics +++++++++++++++++++++++++++++++++++++-->
                 <div id="notifics">
                     <div class="pic-block">
-
+                        <div class="notification-background">
+                            <i class="fa-solid fa-bell-slash"></i>
+                        </div>
                     </div>
                 </div>
                 <!-- notifics +++++++++++++++++++++++++++++++++++++ -->
                 <!-- search +++++++++++++++++++++++++++++++++++++ -->
                 <div id="search">
+                    <div class="pic-block">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                    </div>
 
                 </div>
                 <!-- search +++++++++++++++++++++++++++++++++++++ -->
@@ -136,21 +145,47 @@
             <!-- user chat +++++++++++++++++++++++++++++++++++++-->
             <section id="user-chat" class="col-big">
                 <!-- header-user-chat +++++++++++++++++++++++++++++++++++++-->
-                <header id="header-user-chat">
+                <header id="header-user-chat" class="flex-shrink-0 justify-sb">
+                    <div class="pic-block">
+                        <img src="./img/avatar_1.jpg" alt="">
 
+                    </div>
+                    <div class="options-block">
+                        <i class="fa-solid fa-circle-notch"></i>
+                        <i class="fa-solid fa-message"></i>
+                        <i class="fa-solid fa-ellipsis-vertical"></i>
+                    </div>
                 </header>
                 <!-- header-user-chat +++++++++++++++++++++++++++++++++++++ -->
                 <!-- messages +++++++++++++++++++++++++++++++++++++ -->
                 <div id="messages" class="overflow-hidden">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam reiciendis quasi itaque asperiores, reprehenderit tenetur! Rem ducimus repellendus a libero ut assumenda. Accusantium, dolorem. Earum saepe architecto officiis molestiae totam?
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia alias esse facere, laboriosam accusantium impedit quibusdam facilis quisquam corrupti cumque porro nulla quo blanditiis dolorum ullam, velit, voluptate ducimus sint?
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia alias esse facere, laboriosam accusantium impedit quibusdam facilis quisquam corrupti cumque porro nulla quo blanditiis dolorum ullam, velit, voluptate ducimus sint?
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia alias esse facere, laboriosam accusantium impedit quibusdam facilis quisquam corrupti cumque porro nulla quo blanditiis dolorum ullam, velit, voluptate ducimus sint?
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia alias esse facere, laboriosam accusantium impedit quibusdam facilis quisquam corrupti cumque porro nulla quo blanditiis dolorum ullam, velit, voluptate ducimus sint?
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia alias esse facere, laboriosam accusantium impedit quibusdam facilis quisquam corrupti cumque porro nulla quo blanditiis dolorum ullam, velit, voluptate ducimus sint?
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia alias esse facere, laboriosam accusantium impedit quibusdam facilis quisquam corrupti cumque porro nulla quo blanditiis dolorum ullam, velit, voluptate ducimus sint?
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia alias esse facere, laboriosam accusantium impedit quibusdam facilis quisquam corrupti cumque porro nulla quo blanditiis dolorum ullam, velit, voluptate ducimus sint?
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia alias esse facere, laboriosam accusantium impedit quibusdam facilis quisquam corrupti cumque porro nulla quo blanditiis dolorum ullam, velit, voluptate ducimus sint?
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam reiciendis quasi itaque asperiores,
+                    reprehenderit tenetur! Rem ducimus repellendus a libero ut assumenda. Accusantium, dolorem. Earum
+                    saepe architecto officiis molestiae totam?
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia alias esse facere, laboriosam
+                    accusantium impedit quibusdam facilis quisquam corrupti cumque porro nulla quo blanditiis dolorum
+                    ullam, velit, voluptate ducimus sint?
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia alias esse facere, laboriosam
+                    accusantium impedit quibusdam facilis quisquam corrupti cumque porro nulla quo blanditiis dolorum
+                    ullam, velit, voluptate ducimus sint?
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia alias esse facere, laboriosam
+                    accusantium impedit quibusdam facilis quisquam corrupti cumque porro nulla quo blanditiis dolorum
+                    ullam, velit, voluptate ducimus sint?
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia alias esse facere, laboriosam
+                    accusantium impedit quibusdam facilis quisquam corrupti cumque porro nulla quo blanditiis dolorum
+                    ullam, velit, voluptate ducimus sint?
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia alias esse facere, laboriosam
+                    accusantium impedit quibusdam facilis quisquam corrupti cumque porro nulla quo blanditiis dolorum
+                    ullam, velit, voluptate ducimus sint?
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia alias esse facere, laboriosam
+                    accusantium impedit quibusdam facilis quisquam corrupti cumque porro nulla quo blanditiis dolorum
+                    ullam, velit, voluptate ducimus sint?
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia alias esse facere, laboriosam
+                    accusantium impedit quibusdam facilis quisquam corrupti cumque porro nulla quo blanditiis dolorum
+                    ullam, velit, voluptate ducimus sint?
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia alias esse facere, laboriosam
+                    accusantium impedit quibusdam facilis quisquam corrupti cumque porro nulla quo blanditiis dolorum
+                    ullam, velit, voluptate ducimus sint?
 
 
 
