add: searchbar and lens

--- a/index.html
+++ b/index.html
@@ -43,9 +43,8 @@
                 <!-- notifics +++++++++++++++++++++++++++++++++++++ -->
                 <!-- search +++++++++++++++++++++++++++++++++++++ -->
                 <div id="search">
-                    <div class="pic-block">
-                        <i class="fa-solid fa-magnifying-glass"></i>
-                    </div>
+                        <i class="fa-solid fa-magnifying-glass lens"></i>
+                    <input type="text" placeholder="           lorem tanto lorem tanto tanot lorem">
 
                 </div>
                 <!-- search +++++++++++++++++++++++++++++++++++++ -->
