add: responsive text and pictures

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 <header id="header-user-options" class="justify-sb left-text-block flex-shrink-0">
                     <div class="pic-block">
                         <img src="./img/avatar_1.jpg" alt="">
-
                     </div>
+                    
                     <div class="options-block">
                         <i class="fa-solid fa-circle-notch"></i>
                         <i class="fa-solid fa-message"></i>
@@ -38,6 +38,15 @@
                         <div class="notification-background">
                             <i class="fa-solid fa-bell-slash"></i>
                         </div>
+                    </div>
+                    <div class="contact-text">
+                        <div class="contact-text-top">
+                            <p class="text-font-12px">Michele</p>
+                        </div>
+                        <div class="contact-text-bottom">
+                            <p class="text-font-6px">lorem ipsum dolor</p>
+                        </div>
+
                     </div>
                 </div>
                 <!-- notifics +++++++++++++++++++++++++++++++++++++ -->
@@ -54,11 +63,30 @@
                         <div class="pic-block">
                             <img src="./img/avatar_1.jpg" alt="">
                         </div>
+                        <div class="contact-text">
+                            <div class="contact-text-top">
+                                <p class="text-font-12px">Michele</p>
+                                <p class="text-font-6px"> 16:20 </p>
+                            </div>
+                            <div class="contact-text-bottom">
+                                <p class="text-font-6px">lorem ipsum dolor</p>
+                            </div>
 
+                        </div>
                     </div>
                     <div class="left-text-block">
                         <div class="pic-block">
                             <img src="./img/avatar_1.jpg" alt="">
+
+                        </div>
+                        <div class="contact-text">
+                            <div class="contact-text-top">
+                                <p class="text-font-12px">Michele</p>
+                                <p class="text-font-6px"> 16:20 </p>
+                            </div>
+                            <div class="contact-text-bottom">
+                                <p class="text-font-6px">lorem ipsum dolor</p>
+                            </div>
 
                         </div>
 
@@ -147,6 +175,15 @@
                 <header id="header-user-chat" class="flex-shrink-0 justify-sb">
                     <div class="pic-block">
                         <img src="./img/avatar_1.jpg" alt="">
+
+                    </div>
+                    <div class="contact-text-user-chat">
+                        <div class="contact-text-top">
+                            <p class="text-font-12px">Michele</p>
+                        </div>
+                        <div class="contact-text-bottom">
+                            <p class="text-font-6px">lorem ipsum dolor</p>
+                        </div>
 
                     </div>
                     <div class="options-block">
