add: messages skeleton

--- a/index.html
+++ b/index.html
@@ -195,33 +195,14 @@
                 <!-- header-user-chat +++++++++++++++++++++++++++++++++++++ -->
                 <!-- messages +++++++++++++++++++++++++++++++++++++ -->
                 <div id="messages" class="overflow-hidden">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam reiciendis quasi itaque asperiores,
-                    reprehenderit tenetur! Rem ducimus repellendus a libero ut assumenda. Accusantium, dolorem. Earum
-                    saepe architecto officiis molestiae totam?
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia alias esse facere, laboriosam
-                    accusantium impedit quibusdam facilis quisquam corrupti cumque porro nulla quo blanditiis dolorum
-                    ullam, velit, voluptate ducimus sint?
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia alias esse facere, laboriosam
-                    accusantium impedit quibusdam facilis quisquam corrupti cumque porro nulla quo blanditiis dolorum
-                    ullam, velit, voluptate ducimus sint?
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia alias esse facere, laboriosam
-                    accusantium impedit quibusdam facilis quisquam corrupti cumque porro nulla quo blanditiis dolorum
-                    ullam, velit, voluptate ducimus sint?
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia alias esse facere, laboriosam
-                    accusantium impedit quibusdam facilis quisquam corrupti cumque porro nulla quo blanditiis dolorum
-                    ullam, velit, voluptate ducimus sint?
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia alias esse facere, laboriosam
-                    accusantium impedit quibusdam facilis quisquam corrupti cumque porro nulla quo blanditiis dolorum
-                    ullam, velit, voluptate ducimus sint?
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia alias esse facere, laboriosam
-                    accusantium impedit quibusdam facilis quisquam corrupti cumque porro nulla quo blanditiis dolorum
-                    ullam, velit, voluptate ducimus sint?
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia alias esse facere, laboriosam
-                    accusantium impedit quibusdam facilis quisquam corrupti cumque porro nulla quo blanditiis dolorum
-                    ullam, velit, voluptate ducimus sint?
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia alias esse facere, laboriosam
-                    accusantium impedit quibusdam facilis quisquam corrupti cumque porro nulla quo blanditiis dolorum
-                    ullam, velit, voluptate ducimus sint?
+                  <div class="message">
+
+                  </div>
+
+                  <div class="message">
+
+                  </div>
+
 
 
 
