add: footer responsive

--- a/index.html
+++ b/index.html
@@ -211,7 +211,15 @@
 
                 <!-- footer-user-chat +++++++++++++++++++++++++++++++++++++-->
 
-                <div id="footer-user-chat" class="height-7-p">
+                <div id="footer-user-chat" class="height-7-p justify-sb">
+
+                    <div>
+                        <i class="fa-regular fa-face-smile"></i>
+                    </div>
+                    <input type="text">
+                    <div> <i class="fa-solid fa-microphone"></i> 
+                    </div>
+
 
                 </div>
                 <!-- footer-user-chat +++++++++++++++++++++++++++++++++++++-->
@@ -219,7 +227,8 @@
             </section>
             <!-- user chat +++++++++++++++++++++++++++++++++++++ -->
         </main>
-        <footer class="bg-grey back-footer"></footer>
+        <footer class="bg-grey back-footer">
+        </footer>
 
 
 
